--- a/exmage-wp-image-links/CHANGELOG.txt
+++ b/exmage-wp-image-links/CHANGELOG.txt
@@ -1,3 +1,7 @@
+/**1.0.19 - 2024.11.21**/
+– Updated: Compatible with WP 6.7 and  WC 9.4
+– Updated: Update support class
+
 /**1.0.18 - 2024.06.14**/
 – Updated: Update support class
 
