--- a/exmage-wp-image-links/CHANGELOG.txt
+++ b/exmage-wp-image-links/CHANGELOG.txt
@@ -1,3 +1,7 @@
+/**1.0.21 - 2025.01.20**/
+– Updated: Compatible with WC 9.5.2
+– Updated: Update support class
+
 /**1.0.20 - 2024.12.06**/
 – Updated: Compatible with WP 6.7.1 and  WC 9.4.3
 - Fixed: Cannot add image by URL in Media
