--- a/exmage-wp-image-links/CHANGELOG.txt
+++ b/exmage-wp-image-links/CHANGELOG.txt
@@ -1,3 +1,9 @@
+/**1.0.22 - 2025.02.28**/
+- Added: Added filter images by Exmage on the upload.php page
+- Added: Bulk download external images on the upload.php page.
+– Updated: Compatible with WP 6.7.2 and WC 9.7
+– Updated: Update support class
+
 /**1.0.21 - 2025.01.20**/
 – Updated: Compatible with WC 9.5.2
 – Updated: Update support class
