--- a/exmage-wp-image-links/CHANGELOG.txt
+++ b/exmage-wp-image-links/CHANGELOG.txt
@@ -1,3 +1,6 @@
+/**1.0.23 - 2025.03.03**/
+- Fixed: Fixed call to undefined function get_current_screen()
+
 /**1.0.22 - 2025.02.28**/
 - Added: Added filter images by Exmage on the upload.php page
 - Added: Bulk download external images on the upload.php page.
