--- a/exmage-wp-image-links/CHANGELOG.txt
+++ b/exmage-wp-image-links/CHANGELOG.txt
@@ -1,3 +1,7 @@
+/**1.0.24 - 2025.04.18**/
+– Updated: Compatible with WP 6.8 and WC 9.8
+– Updated: Update support class
+
 /**1.0.23 - 2025.03.03**/
 - Fixed: Fixed call to undefined function get_current_screen()
 
