--- a/exmage-wp-image-links/CHANGELOG.txt
+++ b/exmage-wp-image-links/CHANGELOG.txt
@@ -1,3 +1,7 @@
+/**1.0.25 - 2025.07.26**/
+– Updated: Compatible with WP 6.8.2 and WC 10.0.3
+– Updated: Update support class
+
 /**1.0.24 - 2025.04.18**/
 – Updated: Compatible with WP 6.8 and WC 9.8
 – Updated: Update support class
