--- a/exmage-wp-image-links/CHANGELOG.txt
+++ b/exmage-wp-image-links/CHANGELOG.txt
@@ -1,3 +1,7 @@
+/**1.1.1 - 2026.01.20**/
+– Updated: Compatible with WC 10.4 and WP 6.9
+– Updated: Update support class
+
 /**1.1.0 - 2025.09.05**/
 – Updated: Updated to new interface
 – Updated: Compatible with WC 10.1.2
